# EPQ-BH-project

./: Makefile  README  black_hole.cpp  main  main.cpp  main_old.cpp  python_tests.ipynb  run.sh  script-buttons.json  simdata.csv
BSSN/: CMakeLists.txt
BSSN/python/: plot.py
BSSN/src/: evolution.cpp  evolution.hpp  fieldData.cpp  fieldData.hpp  fieldTypes.hpp  geometry.cpp  geometry.hpp  initial_conditions.cpp  initial_conditions.hpp  main.cpp  utilities.hpp
DU_SIM/: sim.py
OLD_CODE/: main.cpp
SIMPLE_SIM/: p.py  python_tests.ipynb
SIMPLE_SIM/scripts/: build.sh
Single_Black_Hole_Simulation/: simulation.ipynb
